deployments/04-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - myapp.com
    - mysecondapp.com
    secretName: my-tls-secret
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 8080
  - host: mysecondapp.com  # New subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: second-app-service
            port:
              number: 8080
